sdm845-common: update omnis on boot sequence
Signed-off-by: liquid0624 <rjbirnesser@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -126,6 +126,8 @@ on boot
     chown system system /sys/class/power_supply/usb/otg_switch
     chmod 0660 /sys/class/power_supply/usb/otg_switch
 
+    mkdir /persist/battery 0770 system system
+
     setprop vendor.camera.aux.packagelist com.oneplus.camera
 
 on charger
